fixed btnSpinner on small screen sizes

--- a/styles/cardStyle.css
+++ b/styles/cardStyle.css
@@ -148,6 +148,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row !important;
 }
 
 @media screen and (max-width: 768px) {
